Revised ModuleManager, remove maven core module. Successful NetworkManager test